libs/@local/hashql/ast/tests/ui/lowering/type-extractor/definition/list-parameter-count-mismatch.jsonc
//@ run: fail
//@ description: Tests List intrinsic with wrong parameter count
[
  "type",
  "EmptyList",
  "List",
  //~^ ERROR `::kernel::type::List` needs 1 parameter, but found 0
  "_"
]
